[package]
name = "buddhist-agent"
version = "0.1.0"
edition = "2021"
description = "A Buddhist-inspired agent architecture prototype in Rust"
license = "MIT"
repository = "https://github.com/heyas/buddhist-agent-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
